Add test.nakshsoft.css and two class with image HOT and SOFT

--- a/test.nakshsoft.html
+++ b/test.nakshsoft.html
@@ -543,7 +543,11 @@
 
 .lleo_hidden_iframe {
     visibility: hidden;
-}</style></head><body><div class="modal"><!-- Place at bottom of page --></div>
+}</style>
+
+<link rel="stylesheet" type="text/css" href="test.nakshsoft.css">
+
+</head><body><div class="modal"><!-- Place at bottom of page --></div>
 
 	
 
